...
            "value": "Inhalt"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Contents"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Índice"
...
            "value": "Schriftart"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Typeface"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Tipografía"
...
            "value": "Zeilenabstand"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Line spacing"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Interlineado"
...
            "value": "Seitenfarbe"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Page colour"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Color de la página"
...
